objects/ASI_KOR_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_A_P_Type__c</fullName>
        <label>A&amp;P Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>ASI_KOR_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Background_Color__c</fullName>
        <label>Background Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AliceBlue</fullName>
                </value>
                <value>
                    <fullName>AntiqueWhite</fullName>
                </value>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Aquamarine</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Bisque</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>BlanchedAlmond</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>BlueViolet</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>BurlyWood</fullName>
                </value>
                <value>
                    <fullName>CadetBlue</fullName>
                </value>
                <value>
                    <fullName>Chartreuse</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>CornflowerBlue</fullName>
                </value>
                <value>
                    <fullName>Cornsilk</fullName>
                </value>
                <value>
                    <fullName>Crimson</fullName>
                </value>
                <value>
                    <fullName>Cyan</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkCyan</fullName>
                </value>
                <value>
                    <fullName>DarkGoldenRod</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>DarkGrey</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkKhaki</fullName>
                </value>
                <value>
                    <fullName>DarkMagenta</fullName>
                </value>
                <value>
                    <fullName>DarkOliveGreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Channel__c</fullName>
        <label>Channel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Color_Reference__c</fullName>
        <label>Color Reference</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GL_Account_Code__c</fullName>
        <label>GL Account Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Brand__c</fullName>
        <label>Brand</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Items__c</fullName>
        <label>Promotion Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Responsible_By__c</fullName>
        <label>Responsible By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Venue__c</fullName>
        <label>Target Venue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Text_Color__c</fullName>
        <label>Text Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AliceBlue</fullName>
                </value>
                <value>
                    <fullName>AntiqueWhite</fullName>
                </value>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Aquamarine</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Bisque</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>BlanchedAlmond</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>BlueViolet</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>BurlyWood</fullName>
                </value>
                <value>
                    <fullName>CadetBlue</fullName>
                </value>
                <value>
                    <fullName>Chartreuse</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>CornflowerBlue</fullName>
                </value>
                <value>
                    <fullName>Cornsilk</fullName>
                </value>
                <value>
                    <fullName>Crimson</fullName>
                </value>
                <value>
                    <fullName>Cyan</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkCyan</fullName>
                </value>
                <value>
                    <fullName>DarkGoldenRod</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>DarkGrey</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkKhaki</fullName>
                </value>
                <value>
                    <fullName>DarkMagenta</fullName>
                </value>
                <value>
                    <fullName>DarkOliveGreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Name__c</columns>
        <columns>ASI_KOR_Record_Type_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Promotion_Start_Date__c</columns>
        <columns>ASI_KOR_Promotion_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_National_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Name__c</columns>
        <columns>ASI_KOR_Record_Type_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Promotion_Start_Date__c</columns>
        <columns>ASI_KOR_Promotion_End_Date__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>National</value>
        </filters>
        <label>All National Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Tailor_Made_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Promotion_Name__c</columns>
        <columns>ASI_KOR_Record_Type_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_KOR_Promotion_Start_Date__c</columns>
        <columns>ASI_KOR_Promotion_End_Date__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Tailor Made</value>
        </filters>
        <label>All Tailor-Made Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_Global</fullName>
        <active>true</active>
        <label>National</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Team</fullName>
        <active>true</active>
        <label>Tailor Made</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_KOR_EndDateShouldBeAfterStartDate</fullName>
        <active>true</active>
        <description>End date must be same or after start date</description>
        <errorConditionFormula>ASI_KOR_Promotion_End_Date__c  &lt;  ASI_KOR_Promotion_Start_Date__c</errorConditionFormula>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>